--- a/popup.html
+++ b/popup.html
@@ -5,6 +5,21 @@
   <title>CleanBrain - Saved Snippets</title>
   <link rel="stylesheet" href="style.css">
   <script src="popup.js"></script>
+  <style>
+    body {
+
+        min-width: 400px;
+        min-height: 600px;
+        background-image: url('brain.png');
+        background-size: cover;
+        background-position: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+    }
+  </style>
 </head>
 <body>
   <div class="container">
